--- a/QADTimeTabler/QADTimeTabler.csproj
+++ b/QADTimeTabler/QADTimeTabler.csproj
@@ -111,12 +111,6 @@
     <Compile Include="AboutBox1.Designer.cs">
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Administration\DataManager.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Administration\DataManager.Designer.cs">
-      <DependentUpon>DataManager.cs</DependentUpon>
-    </Compile>
     <Compile Include="Administration\SchoolsDepartments.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +123,24 @@
     <Compile Include="Administration\UserManagement.Designer.cs">
       <DependentUpon>UserManagement.cs</DependentUpon>
     </Compile>
+    <Compile Include="dummydata\cohorts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dummydata\cohorts.Designer.cs">
+      <DependentUpon>cohorts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="dummydata\lecturers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dummydata\lecturers.Designer.cs">
+      <DependentUpon>lecturers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Cohorts\EditCohort.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cohorts\EditCohort.Designer.cs">
+      <DependentUpon>EditCohort.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cohorts\ManageCohorts.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +152,12 @@
     </Compile>
     <Compile Include="Courses\AddClass.Designer.cs">
       <DependentUpon>AddClass.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Courses\EditCourse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Courses\EditCourse.Designer.cs">
+      <DependentUpon>EditCourse.cs</DependentUpon>
     </Compile>
     <Compile Include="Courses\SelectClassLecturer.cs">
       <SubType>Form</SubType>
@@ -177,14 +195,37 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="dummydata\courses.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dummydata\courses.Designer.cs">
+      <DependentUpon>courses.cs</DependentUpon>
+    </Compile>
     <Compile Include="HelperClasses\TTGenerator.cs" />
     <Compile Include="HelperClasses\Population.cs" />
-    <Compile Include="Migrations\202210180822198_M1.cs" />
-    <Compile Include="Migrations\202210180822198_M1.designer.cs">
-      <DependentUpon>202210180822198_M1.cs</DependentUpon>
+    <Compile Include="Migrations\202303080653585_InitialCreate.cs" />
+    <Compile Include="Migrations\202303080653585_InitialCreate.designer.cs">
+      <DependentUpon>202303080653585_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202303080656566_M1.cs" />
+    <Compile Include="Migrations\202303080656566_M1.designer.cs">
+      <DependentUpon>202303080656566_M1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202303080659529_M2.cs" />
+    <Compile Include="Migrations\202303080659529_M2.designer.cs">
+      <DependentUpon>202303080659529_M2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202303080918016_M3.cs" />
+    <Compile Include="Migrations\202303080918016_M3.designer.cs">
+      <DependentUpon>202303080918016_M3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202303091010096_M4.cs" />
+    <Compile Include="Migrations\202303091010096_M4.designer.cs">
+      <DependentUpon>202303091010096_M4.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\LHLocation.cs" />
+    <Compile Include="Models\FinalPostClass.cs" />
     <Compile Include="Models\PostClass.cs" />
     <Compile Include="Models\ClassObject.cs" />
     <Compile Include="Models\PreClass.cs" />
@@ -228,12 +269,6 @@
     <Compile Include="Lecturers\ManageLecturers.Designer.cs">
       <DependentUpon>ManageLecturers.cs</DependentUpon>
     </Compile>
-    <Compile Include="AboutSoftware.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AboutSoftware.Designer.cs">
-      <DependentUpon>AboutSoftware.cs</DependentUpon>
-    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -255,11 +290,14 @@
       <DependentUpon>GenerateTimetable.cs</DependentUpon>
     </Compile>
     <Compile Include="TimeDbContext.cs" />
+    <Compile Include="Timetabling\ViewClassInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Timetabling\ViewClassInfo.Designer.cs">
+      <DependentUpon>ViewClassInfo.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AboutBox1.resx">
       <DependentUpon>AboutBox1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Administration\DataManager.resx">
-      <DependentUpon>DataManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Administration\SchoolsDepartments.resx">
       <DependentUpon>SchoolsDepartments.cs</DependentUpon>
@@ -267,11 +305,26 @@
     <EmbeddedResource Include="Administration\UserManagement.resx">
       <DependentUpon>UserManagement.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="dummydata\cohorts.resx">
+      <DependentUpon>cohorts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dummydata\courses.resx">
+      <DependentUpon>courses.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dummydata\lecturers.resx">
+      <DependentUpon>lecturers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Cohorts\EditCohort.resx">
+      <DependentUpon>EditCohort.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Cohorts\ManageCohorts.resx">
       <DependentUpon>ManageCohorts.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Courses\AddClass.resx">
       <DependentUpon>AddClass.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Courses\EditCourse.resx">
+      <DependentUpon>EditCourse.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Courses\SelectClassLecturer.resx">
       <DependentUpon>SelectClassLecturer.cs</DependentUpon>
@@ -294,8 +347,20 @@
     <EmbeddedResource Include="Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202210180822198_M1.resx">
-      <DependentUpon>202210180822198_M1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202303080653585_InitialCreate.resx">
+      <DependentUpon>202303080653585_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303080656566_M1.resx">
+      <DependentUpon>202303080656566_M1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303080659529_M2.resx">
+      <DependentUpon>202303080659529_M2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303080918016_M3.resx">
+      <DependentUpon>202303080918016_M3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202303091010096_M4.resx">
+      <DependentUpon>202303091010096_M4.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Preloader.resx">
       <DependentUpon>Preloader.cs</DependentUpon>
@@ -308,9 +373,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Lecturers\ManageLecturers.resx">
       <DependentUpon>ManageLecturers.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AboutSoftware.resx">
-      <DependentUpon>AboutSoftware.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -330,6 +392,9 @@
     <EmbeddedResource Include="Timetabling\GenerateTimetable.resx">
       <DependentUpon>GenerateTimetable.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Timetabling\ViewClassInfo.resx">
+      <DependentUpon>ViewClassInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -343,6 +408,35 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>8</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="Microsoft.Office.Interop.Excel">
+      <Guid>{00020813-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>9</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="VBIDE">
+      <Guid>{0002E157-0000-0000-C000-000000000046}</Guid>
+      <VersionMajor>5</VersionMajor>
+      <VersionMinor>3</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
